delegates/Arnold/Arnold-7.4.2.1-windows/include/ai_texture.h

// forward declares
class AtUniverse;
/**
 * \struct AtTextureHandle
 *
 * \brief  Structure that holds a handle for a given texture
 *
 * Texture handles can be created through \ref AiTextureHandleCreate and destroyed
 * with \ref AiTextureHandleDestroy. Texture lookups can be done with \ref AiTextureHandleAccess,
 * which is faster than \ref AiTextureAccess.
 */
struct AtTextureHandle;
/**
 * \struct AtImage
 *
 * \brief  Structure that holds infromation for reading, writing and resizing images
 *
 */
struct AtImage
{
   void*   buffer      = nullptr; /**< pixel values        */
   int     width       = 0;       /**< width of the image in pixels        */
   int     height      = 0;       /**< height of the image in pixels        */
   int     full_width  = 0; /**< width of the full display window  in pixels        */
   int     full_height = 0; /**< height of the full display window in pixels        */
   int     x           = 0; /**< origin (upper left corner) of pixel data       */
   int     y           = 0; /**< origin (upper left corner) of pixel data        */
   int     channels    = 0; /**< number of channels per pixel        */
   uint8_t format = 0; /**< data type of pixels AI_TYPE_(BYTE, USHORT, HALF, UINT, FLOAT)*/
   AtArray* aov_names = nullptr; /**< AtArray of AtStrings of aov names        */
   ~AtImage()
   {
      AiFree(aov_names);
      AiFree(buffer);
   }
};
AI_API AtTextureHandle*    AiTextureHandleCreate(const char* filename, AtString texture_color_space = AtString());
AI_API         bool        AiTextureGetResolution(const char* filename, unsigned int* width, unsigned int* height);
AI_API         bool        AiTextureGetNumChannels(const char* filename, unsigned int* num_channels);
AI_API AI_PURE const char* AiTextureGetChannelName(const char* filename, unsigned int channel_index);
AI_API         bool        AiTextureGetFormat(const char* filename, unsigned int* format);
AI_API         bool        AiTextureGetBitDepth(const char* filename, unsigned int* bit_depth);
AI_API         bool        AiTextureGetMatrices(const char* filename, AtMatrix& world_to_screen, AtMatrix& world_to_camera);
AI_API         void        AiTextureInvalidate(const char* filename);
AI_API         AtString    AiTextureGetTxFileName(const char* filename, AtString texture_color_space, AtString render_color_space, const AtUniverse* universe);
AI_API         AtString    AiTextureGetTxSourceFileName(const char* tx_filename);
AI_API         AtString    AiTextureAutoTxFlags(const char* texture_file, AtString texture_color_space, const AtUniverse* universe);
AI_API         bool        AiTextureTxFileNeedsUpdate(const char* texture_file, const char* tx_filename, const char* flags);
AI_API               bool AiReadImage(const char* filename, const uint8_t format, AtImage& image, AtParamValueMap* params = nullptr);
AI_API               bool AiWriteImage(const char* filename, const AtImage& image, AtParamValueMap* params = nullptr);
AI_API               bool AiResizeImage(const AtImage& inImage, AtImage& outImage, AtParamValueMap* params = nullptr);
/**
 * Status of AiMakeTx jobs.
 */
enum AtMakeTxStatus { AiTxPending, AiTxError, AiTxUpdated, AiTxUpdate_unneeded, AiTxAborted };
AI_API         void        AiMakeTx(const char* filename, const char* flags, const AtUniverse* universe = NULL);
AI_API         unsigned    AiMakeTxWaitJob(AtMakeTxStatus*& statuses, const char**& source_files, unsigned int& num_submitted_textures);
AI_API         void        AiMakeTxAbort(AtMakeTxStatus*& statuses, const char**& source_files, unsigned int& num_submitted_textures);